# magnet

./: .gitignore  Cargo.toml
magnet-app/: Cargo.toml
magnet-app/src/: app.rs  controller.rs  lib.rs  routing.rs
magnet-core/: Cargo.toml  README.md
magnet-core/src/: lib.rs  request.rs  response.rs  stack.rs
magnet-example/: Cargo.toml
magnet-example/src/: controllers.rs  lib.rs  models.rs
magnet-more/: Cargo.toml  README.md
magnet-more/src/: lib.rs  params.rs  views.rs
