[package]
name = "magnet_app"
version = "0.0.1"
authors = ["Stefano Cobianchi <stefano.cobianchi@me.com>"]
description = "A web application framework for Rust. Inspired by Iron. Powered by Hyper."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stefanoc/magnet/tree/master/magnet-app"

[dependencies]
hyper = "0.9"
regex = "0.1"
diesel = "0.7"
r2d2 = "0.7"
r2d2-diesel = "0.7"
magnet_core = "0.0.1"
magnet_more = "0.0.1"
