[package]
name = "magnet_example"
version = "0.1.0"
authors = ["Stefano Cobianchi <stefano.cobianchi@me.com>"]

[dependencies]
hyper = "*"
liquid = "*"
diesel = "*"
diesel_codegen = "*"
dotenv = "*"
dotenv_macros = "*"

[dependencies.magnet_core]
path = "../magnet-core"

[dependencies.magnet_more]
path = "../magnet-more"

[dependencies.magnet_app]
path = "../magnet-app"
